--- a/src/index.css
+++ b/src/index.css
@@ -11,26 +11,26 @@ body {
   /* Grid */
   background: conic-gradient(
       from 90deg at 1px 1px,
-      var(--blue-100) 90deg,
-      var(--blue-200) 0
+      var(--blue-900) 90deg,
+      var(--blue-800) 0
     )
     0 0/48px 48px;
 }
 
 :root {
   /* Main colors */
-  --blue-100: #0d0030;
-  --blue-200: #1a0259;
-  --blue-300: #3a00d6;
-  --blue-400: #4b61d5;
+  --blue-900: #0d0030;
+  --blue-800: #1a0259;
+  --blue-700: #3a00d6;
+  --blue-600: #4b61d5;
   --blue-500: #15a1fc;
-  --blue-600: #bff5fa;
+  --blue-400: #bff5fa;
 
-  --accent-orange: #f1962e;
-  --accent-pink: #ff7bed;
-  --accent-yellow: #fed823;
-  --accent-green: #01feb6;
-  --accent-white: #efecd6;
+  --orange: #f1962e;
+  --pink: #ff7bed;
+  --yellow: #fed823;
+  --green: #01feb6;
+  --white: #efecd6;
 
   --shadow-indent: 0px 4px 44px;
   --shadow-pink: rgba(255, 123, 237, 0.5);
