--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,33 @@ body {
     0/48px 48px;
 }
 
+::-webkit-scrollbar {
+  background-color: #00000000;
+  width: 16px;
+}
+
+/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar-track {
+  background-color: #00000000;
+}
+
+/* scrollbar itself */
+::-webkit-scrollbar-thumb {
+  background-color: #fed823;
+  border-radius: 16px;
+  border: 5px solid #fff;
+  filter: dropShadow(0px 0px 10px #fed823);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #f1962e;
+  border: 4px solid #f4f4f4;
+}
+
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {
+  display: none;
+}
+
 .web3modal-modal-lightbox {
   z-index: 100 !important;
 }
