--- a/src/index.css
+++ b/src/index.css
@@ -13,39 +13,31 @@ body {
     0/48px 48px;
 }
 
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #fed823 transparent;
-  scrollbar-shadow-color: #1a0259;
-  scrollbar-width: 8px;
-  scrollbar-gutter: 8px;
-}
-::-webkit-scrollbar {
-  background-color: #00000000;
-  width: 8px;
-}
-
-/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar,
+::-webkit-scrollbar-thumb,
 ::-webkit-scrollbar-track {
-  width: 1px;
-  border: 1px solid #1a0259;
-  background-color: #f1962e;
+  width: 8px;
+  border: none;
+  background: #0d0030;
 }
 
-/* scrollbar itself */
-::-webkit-scrollbar-thumb {
-  background-color: #fed823;
-  border-radius: 50px;
-  filter: dropShadow(0px 0px 10px #fed823);
-}
-::-webkit-scrollbar-thumb:hover {
-  background-color: #f1962e;
-  border: 4px solid #f4f4f4;
-}
-
-/* set button(top and bottom of the scrollbar) */
-::-webkit-scrollbar-button {
+::-webkit-scrollbar-button,
+::-webkit-scrollbar-track-piece,
+::-webkit-scrollbar-corner,
+::-webkit-resizer {
   display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  background-color: #fed823;
+  box-shadow: 0px 0px 5vmin 5vmin #fed82350;
+}
+
+::-webkit-scrollbar-track {
+  background-image: url('/img/scrollBarBack.png');
+  background-repeat: repeat-y;
+  background-size: contain;
 }
 
 .web3modal-modal-lightbox {
