--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@ body {
     0/48px 48px;
 }
 
+@media screen and (max-width: 600px) {
+  body {
+    background: conic-gradient(from 90deg at 1px 1px, #0d0030 90deg, #1a0259 0)
+      0 0/32px 32px;
+  }
+}
+
 .web3modal-modal-lightbox {
   z-index: 100 !important;
 }
