--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,66 @@ body {
     0/48px 48px;
 }
 
+@keyframes greenSphereAnimation {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(0px, 715px);
+  }
+  65% {
+    transform: translate(84px, 715px);
+  }
+  75% {
+    transform: translate(84px, 1080px);
+  }
+  100% {
+    transform: translate(-15px, 1210px);
+  }
+}
+@keyframes yellowSphereAnimation {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(0px, 715px);
+  }
+  65% {
+    transform: translate(0px, 715px);
+  }
+  75% {
+    transform: translate(0px, 1120px);
+  }
+  100% {
+    transform: translate(-90px, 1230px);
+  }
+}
+@keyframes pinkSphereAnimation {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  50% {
+    transform: translate(0px, 705px);
+  }
+  65% {
+    transform: translate(-84px, 705px);
+  }
+  75% {
+    transform: translate(-84px, 1080px);
+  }
+  100% {
+    transform: translate(30px, 1210px);
+  }
+}
+
 @media screen and (max-width: 600px) {
   body {
     background: conic-gradient(from 90deg at 1px 1px, #0d0030 90deg, #1a0259 0)
       0 0/32px 32px;
   }
+}
+
+@keyframes SpheresAnimmation {
 }
 
 .simplebar-scrollbar:before {
