--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -11,6 +15,82 @@ body {
   /* Grid */
   background: conic-gradient(from 90deg at 1px 1px, #0d0030 90deg, #1a0259 0) 0
     0/48px 48px;
+}
+
+@keyframes greenSphereAnimation {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  20% {
+    transform: translate(0px, 0px);
+  }
+  40% {
+    transform: translate(0px, 715px);
+  }
+  50% {
+    transform: translate(84px, 715px);
+  }
+  60% {
+    transform: translate(84px, 1080px);
+    opacity: 100;
+  }
+  65% {
+    transform: translate(-10px, 1180px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-25px, 1383px);
+  }
+}
+@keyframes yellowSphereAnimation {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  20% {
+    transform: translate(0px, 0px);
+  }
+  40% {
+    transform: translate(0px, 725px);
+  }
+  50% {
+    transform: translate(0px, 725px);
+  }
+  60% {
+    transform: translate(0px, 1120px);
+    opacity: 100;
+  }
+  65% {
+    transform: translate(-85px, 1210px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-85px, 1415px);
+  }
+}
+@keyframes pinkSphereAnimation {
+  0% {
+    transform: translate(0px, 0px);
+  }
+  20% {
+    transform: translate(0px, 0px);
+  }
+  40% {
+    transform: translate(0px, 705px);
+  }
+  50% {
+    transform: translate(-84px, 705px);
+  }
+  60% {
+    transform: translate(-84px, 1080px);
+    opacity: 100;
+  }
+  65% {
+    transform: translate(0px, 1160px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(6px, 1370px);
+  }
 }
 
 @media screen and (max-width: 600px) {
