Update colors' names

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
     0/48px 48px;
 }
 
-@keyframes greenSphereAnimation {
+@keyframes tertiarySphereAnimation {
   0% {
     transform: translate(0px, 0px);
   }
@@ -42,7 +42,7 @@ body {
     transform: translate(-25px, 1383px);
   }
 }
-@keyframes yellowSphereAnimation {
+@keyframes primarySphereAnimation {
   0% {
     transform: translate(0px, 0px);
   }
@@ -67,7 +67,7 @@ body {
     transform: translate(-85px, 1415px);
   }
 }
-@keyframes pinkSphereAnimation {
+@keyframes secondarySphereAnimation {
   0% {
     transform: translate(0px, 0px);
   }
