--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  background-color: #0d0030;
+}
 body {
   scroll-behavior: smooth;
   margin: 0;
