--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ html {
 body {
   scroll-behavior: smooth;
   margin: 0;
+  min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'JetBrains Mono', monospace;
