Fix sphere positions when they reach ID cards

--- a/src/index.css
+++ b/src/index.css
@@ -53,13 +53,19 @@ body {
     /* Orb before fork */
     transform: translate(5.25rem, 67.5rem);
   }
-  65% {
-    /* Orb to the behind the ID Card */
-    transform: translate(-0.625rem, 73.75rem);
+  64% {
+    /* Orb going behind the ID Card */
+    transform: translate(-0.63rem, 73.75rem);
   }
-  100% {
+  65% {
     /* Orb goes and stays behind ID card */
     /* Reveal animation happens inside IdentityCard */
+
+    transform: translate(-1.563rem, 86.438rem);
+  }
+
+  100% {
+    /* Orbs stays behind ID card if user scroll to the end of the page */
     transform: translate(-1.563rem, 86.438rem);
   }
 }
@@ -78,11 +84,12 @@ body {
   }
   60% {
     transform: translate(0rem, 70rem);
-    opacity: 100;
+  }
+  64% {
+    transform: translate(-5.313rem, 75.625rem);
   }
   65% {
-    transform: translate(-5.313rem, 75.625rem);
-    opacity: 0;
+    transform: translate(-5.313rem, 88.438rem);
   }
   100% {
     transform: translate(-5.313rem, 88.438rem);
@@ -103,11 +110,12 @@ body {
   }
   60% {
     transform: translate(-5.25rem, 67.5rem);
-    opacity: 100;
+  }
+  64% {
+    transform: translate(0rem, 72.5rem);
   }
   65% {
-    transform: translate(0rem, 72.5rem);
-    opacity: 0;
+    transform: translate(0.375rem, 85.625rem);
   }
   100% {
     transform: translate(0.375rem, 85.625rem);
