Hide scrollbar on Firefox (#206)
* hide scrollbar on firefox

* updated

* a little update

* use lock from main

* one more lock

* fix yarn and clean up classnames

* get rid of class={}

Co-authored-by: Nikita Kolmogorov <backmeupplz@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -121,16 +121,6 @@ body {
   }
 }
 
-/* Removes plain scrollbar from Ff*/
-.scrollable-wrapper {
-  scrollbar-width: 0;
-  overflow: auto;
-}
-/* from other browsers */
-.scrollable-wrapper::-webkit-scrollbar {
-  width: 0;
-}
-
 .custom-scrollbar-thumb {
   position: absolute;
   left: 1.5px;
@@ -139,6 +129,7 @@ body {
   border-radius: 10rem;
   filter: drop-shadow(0rem 0rem 0.625rem #fed823);
   z-index: 20;
+  transition: all;
 }
 .custom-scrollbar-body {
   position: absolute;
