--- a/src/index.css
+++ b/src/index.css
@@ -34,9 +34,6 @@ body {
 }
 
 @keyframes tertiarySphereAnimation {
-  0% {
-    transform: translate(0rem, 0rem);
-  }
   20% {
     /* Animation starts after 20% of page is scrolled */
     transform: translate(0rem, 0rem);
@@ -61,17 +58,10 @@ body {
     /* Orb goes and stays behind ID card */
     /* Reveal animation happens inside IdentityCard */
     transform: translate(-0.563rem, 86.438rem);
-  }
-
-  100% {
-    /* Orbs stays behind ID card if user scroll to the end of the page */
-    transform: translate(-0.563rem, 86.438rem);
+    opacity: 0;
   }
 }
 @keyframes accentSphereAnimation {
-  0% {
-    transform: translate(0rem, 0rem);
-  }
   20% {
     transform: translate(0rem, 0rem);
   }
@@ -89,15 +79,10 @@ body {
   }
   65% {
     transform: translate(-5.313rem, 88.438rem);
-  }
-  100% {
-    transform: translate(-5.313rem, 88.438rem);
+    opacity: 0;
   }
 }
 @keyframes secondarySphereAnimation {
-  0% {
-    transform: translate(0rem, 0rem);
-  }
   20% {
     transform: translate(0rem, 0rem);
   }
@@ -115,9 +100,7 @@ body {
   }
   65% {
     transform: translate(0.375rem, 85.625rem);
-  }
-  100% {
-    transform: translate(0.375rem, 85.625rem);
+    opacity: 0;
   }
 }
 
