Try to replace self-written with css-scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,20 @@ body {
   }
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 @keyframes tertiarySphereAnimation {
   20% {
     /* Animation starts after 20% of page is scrolled */
