--- a/src/index.css
+++ b/src/index.css
@@ -34,17 +34,18 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 11px;
 }
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #00000000;
+  background-image: url('img/scrollbarBg.png');
 }
 ::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 10px;
+  background: #fed823;
+  border-radius: 5px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #fed950;
 }
 
 @keyframes tertiarySphereAnimation {
