--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 11px;
+  width: 25px;
 }
 ::-webkit-scrollbar-track {
   background: #00000000;
@@ -42,10 +42,15 @@ body {
 }
 ::-webkit-scrollbar-thumb {
   background: #fed823;
-  border-radius: 5px;
+  border-radius: 20px;
+  background-clip: content-box;
+  border: 8px solid transparent;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #fed950;
+  border-radius: 20px;
+  background-clip: content-box;
+  border: 7.5px solid transparent;
 }
 
 @keyframes tertiarySphereAnimation {
