--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@
   --formal-accent-semi-transparent: rgba(239, 236, 214, 0.4);
   --error-semi-transparent: rgba(255, 123, 131, 0.2);
   --selection: #ff7bed35;
+  --transparent: #00000000;
+}
+* {
+  -webkit-tap-highlight-color: var(--transparent);
 }
 
 html {
@@ -87,6 +91,10 @@ body {
   .hover-tertiary:hover {
     color: var(--tertiary);
     text-decoration: underline;
+  }
+  .hover-menu-element:hover {
+    background-color: var(--primary-semi-dimmed);
+    stroke: var(--formal-accent);
   }
 }
 
