--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,15 @@ body {
   }
 }
 
+/* 1st - for each before-last 1, 4, 7 */
+/* 2nd - for each not 1, 4, 7, not 3, 6, 9, but last and 2, 6, 8  */
+.double-badge:nth-child(n + 1):nth-child(3n - 2):nth-last-child(2),
+.double-badge:nth-child(n + 2):not(:nth-child(3n
+      -
+      2)):not(:nth-child(3n)):last-child {
+  grid-column: span 3 / span 3;
+}
+
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 25px;
