--- a/src/index.css
+++ b/src/index.css
@@ -91,9 +91,9 @@ body {
 }
 
 /* for each badge number 1, 4, 7 + before-last */
-.double-badge:nth-child(n + 1):nth-child(3n - 2):nth-last-child(2),
+.double-badge-last-row:nth-child(n + 1):nth-child(3n - 2):nth-last-child(2),
 /* for each badges number 2, 6, 8, not 1, 4, 7, not 3, 6, 9 + only last  */
-.double-badge:nth-child(n + 2):not(:nth-child(3n
+.double-badge-last-row:nth-child(n + 2):not(:nth-child(3n
       -
       2)):not(:nth-child(3n)):last-child {
   grid-column: span 3 / span 3;
